--- a/README
+++ b/README
@@ -1,5 +1,50 @@
-Attempts to make all jobs look like
+When Env
+~~~~~~~~
+
+Simple application for doing continuous builds.
+
+whenenv is designed to keep the branching involved in build and 
+functional test scripts from growing out of control.
+
+
+
+components of the build isolated and reusable.
+
+
+
+
+Background.
+~~~~~~~~~~
+When env was originally simple application for doing continuous builds.
+
+Jenkins is a very flexable tool for doing automated builds. 
+
+Using Jenkins I became frustrated, but soem tools like the jenkins 
+"Configuration Matrix" plugin make Jenkisn a tool for portability testing.
+Using this "Configuration Matrix" plugin in Jenkins Builds led to this 
+application.
+
+
+Attempts to make all jenkins "Configuration Matrix" jobs look like:
+
+
+Xample usage in Jenkins.
+
+
+
+Script:
+
+
+  PREFIX=yokel_jenkins_jobs
+  PATH_SRC=whenenv
+  rm -rf ${PREFIX} ${PATH_SRC}
+  git clone git://git.fritz.box/yokel_jenkins.git  ${PREFIX}
+  git clone https://github.com/osynge/whenenv.git ${PATH_SRC}
+  python ${PATH_SRC}/whenenv \
+    --envvar PRODUCT \
+    --envvar RELEASE \
+    --envvar OPERATING_SYSTEM \
+    --dir-jobs ${PREFIX}/sdl \
+    --dir-scripts ${PREFIX}/scr
 
 rm -rf yokel_jenkins
-git clone git://git.fritz.box/yokel_jenkins.git yokel_jenkins
-python yokel_jenkins/jenkinsjobrunner
