--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.10
+    * Updated lots of scripts from personal store.
+
 whenenv-0.0.9
     * Deleted lots of unmaintianed examples.
 
