--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.11
+    * Fixed a critical bug in supporting N directories.
+
 whenenv-0.0.10
     * Updated lots of scripts from personal store.
 
