--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@ Changelog
 
 whenenv-0.0.13
     * Moved README REAMME.md and added some markdown.
+    * Decomposed default autotools jobs
+    * Extended time out 
+    * Recover from non 0 return codes
 
 whenenv-0.0.12
     * added build jobs previously lost 
