--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.14
+    * Fix to checking out the latest tag version.
+      - svn_checkout_tag.sh
+      - git_checkout_tag.sh
+
 whenenv-0.0.13
     * Moved README REAMME.md and added some markdown.
     * Decomposed default autotools jobs
