--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.21
+
+    * Removed a few OPERATING_SYSTEM requirements jobs from the system
+      - replaced with PY_OS and PY_OS_VER_MAJ
+
 whenenv-0.0.20
 
     * Removed lots of OPERATING_SYSTEM requirements jobs from the system
