--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.22
+
+    * changed job chroot_teardown_scientific
+      - Depends on require_keys CHROOT
+
 whenenv-0.0.21
 
     * Removed a few OPERATING_SYSTEM requirements jobs from the system
