--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.22
+
+    * Allow building on a BRANCH or a RELEASE enviroment variable.
+
 whenenv-0.0.21
 
     * Removed a few OPERATING_SYSTEM requirements jobs from the system
