--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.35
+
+    * Add tox support for debian 9.
+
 whenenv-0.0.34
 
     * Fix bugs in python disttools bdist and sdist archives twice.
