--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.42
+
+    * Add tox based testing.
+
 whenenv-0.0.41
 
     * Remove depenedency on OPERATING_SYSTEM variable
