--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.43
+
+    * Add tox based testing.
+    * Support python3
+
 whenenv-0.0.42
 
     * Add tox based testing.
