--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.44
+
+    * Fixed syntax bug in python shell
+
 whenenv-0.0.43
 
     * Add tox based testing.
