--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 Changelog
 ~~~~~~~~~~
 
+whenenv-0.0.47
+
+    * Bugfix type error with defaults for transfer/build_env_os.sh
+
 whenenv-0.0.46
 
     * Bugfix add dependency on export_directories_root on job build_env_discover.
